oidc/dex/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  selector:
    app: dex
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex
      containers:
      - image: ghcr.io/dexidp/dex
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        resources:
          limits:
            memory: "64Mi"
            cpu: "10m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
      volumes:
      - name: config
        configMap:
          name: dex-config
          items:
          - key: config.yaml
            path: config.yaml
