oidc/dex/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`id.tosuke.me`)
    kind: Rule
    services:
    - name: dex
      port: 80
  tls:
    secretName: dex-tls-cert
    options:
      name: cloudflare-origin
